--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <h1>ETCH-A-SKETCH</h1>
     <div class="container">
         <div class="left-buttons">
-            <button>Color</button>
-            <button>Rainbow</button>
+            <button>Color mode</button>
+            <button>Rainbow Mode</button>
             <button>Eraser</button>
             <button>Shading</button>
             <button id="clear">Clear</button>
@@ -30,27 +30,11 @@
     
         <div class="middle">
             <div class="grid">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
             </div>
         </div>
     </div>
 
     <script src="script.js"></script>
+    <div id="footer"><p>Hehe</p></div>
 </body>
-<footer><p>Crafted by @heimesh</p></footer>
 </html>
