--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <h1>ETCH-A-SKETCH</h1>
     <div class="container">
         <div class="left-buttons">
-            <button>Color mode</button>
-            <button>Rainbow Mode</button>
-            <button>Eraser</button>
-            <button>Shading</button>
-            <button id="clear">Clear</button>
+            <input type="color" id="color">
+            <button class= "colorBtn">Color mode</button>
+            <button class="rainbow">Rainbow Mode</button>
+            <button class="erase">Eraser</button>
+            <button class="shading">Shading</button>
+            <button class="clear">Clear</button>
             <div class="slidecontainer">
                 <input type="range" min="1" max="100    value="50" class="slider" id="myRange">
             </div>
@@ -35,6 +36,6 @@
     </div>
 
     <script src="script.js"></script>
-    <div id="footer"><p>Hehe</p></div>
+    <div id="footer"><p>jinxed by @heimesh</p></div>
 </body>
 </html>
