--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <button class= "colorBtn">Color mode</button>
             <button class="rainbow">Rainbow Mode</button>
             <button class="erase">Eraser</button>
-            <button class="shading">Shading</button>
             <button class="clear">Clear</button>
             <div class="slidecontainer">
-                <input type="range" min="1" max="100    value="50" class="slider" id="myRange">
+                <input type="range" min="1" max="64" value="16" class="slider" id="myRange" oninput="this.nextElementSibling.value = this.value">
+                <output>16</output>
             </div>
         </div>
     
@@ -36,6 +36,9 @@
     </div>
 
     <script src="script.js"></script>
-    <div id="footer"><p>jinxed by @heimesh</p></div>
+    <div id="footer">
+        <p>made by @heimesh</p>
+        <a href="https://github.com/heimesh"><img src="github-logo.png" alt="Github logo"></a>
+    </div>
 </body>
 </html>
