added information for the grid

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="slidecontainer">
                 <input type="range" min="1" max="64" value="16" class="slider" id="myRange" oninput="this.nextElementSibling.value = this.value">
                 <output>16</output>
+                <p id="gridInfo">Grid size</p>
             </div>
         </div>
     
