Fix link to profile

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <script src="script.js"></script>
     <div id="footer">
         <p>made by @heimesh</p>
-        <a href="https://github.com/heimesh"><img src="github-logo.png" alt="Github logo"></a>
+        <a href="https://github.com/heimeshc"><img src="github-logo.png" alt="Github logo"></a>
     </div>
 </body>
 </html>
